--- a/desafios/ds01/index.html
+++ b/desafios/ds01/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>*Um <br>**Dois <br>***Três <br>****Quatro</p>
     <p>****Quatro <br>***Três <br>**Dois <br>*Um</p>
+    <p><strong>Zero</strong></p>
 </body>
 </html>
