--- a/exercicios/Exercícios alura/C2/produtos.html
+++ b/exercicios/Exercícios alura/C2/produtos.html
@@ -19,5 +19,27 @@
 				</nav>
 			</div>
 		</header>
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Cabelo</h2>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Tesoura ou máquina </p>
+					<p class="produtos-preco">R$25,00</p>
+				</li>
+				<li>
+					<h2>Barba</h2>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Corte e desenho de barba</p>
+					<p class="produtos-preco">R$18,00</p>
+				</li>
+				<li>
+					<h2>Cabelo + barba</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Barba, cabelo e bigode</p>
+					<p class="produtos-preco">R$35,00</p>
+				</li>
+			</ul>
+		</main>
 	</body>
 </html>
