--- a/exercicios/Exercícios alura/C2/index.html
+++ b/exercicios/Exercícios alura/C2/index.html
@@ -8,7 +8,14 @@
 
 	<body>
 		<header>
+			<div class="caixa">
 			<h1 class="titulo-principal">Barbearia Alura</h1>
+			<nav>
+				<ul>
+					<li><a href="produtos.html">Produtos</a></li>
+				</ul>
+			</nav>
+			</div>
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
