--- a/exercicios/Exercícios alura/C2/produtos.html
+++ b/exercicios/Exercícios alura/C2/produtos.html
@@ -41,5 +41,9 @@
 				</li>
 			</ul>
 		</main>
+		<footer>
+			<img src="logo-branco.png">
+			<p class="rodapetxt"> &copy; Copyright</p>
+		</footer>
 	</body>
 </html>
