--- a/exercicios/Exercícios alura/C2/contato.html
+++ b/exercicios/Exercícios alura/C2/contato.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 	<head>
 		<meta charset="UTF-8">
 		<title>Contato - Barbearia Alura</title>
+		
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
 	</head>
@@ -20,7 +21,18 @@
 			</div>
 		</header>
         <main>
-            teste
+            <form >
+				<label for="nome-e-sobrenome">Nome e sobrenome</label>
+				<input type="text" id="nome-e-sobrenome">
+
+				<label for="email">Email</label>
+				<input type="text" id="email">
+
+				<label for="telefone">Telefone</label>
+				<input type="text" id="telefone">
+
+				<input type="submit" value="Enviar">
+			</form>
         </main>
         <footer>
 			<img src="logo-branco.png">
