alter css, tables, transition & transform

--- a/cursoHtmlAlura/contato.html
+++ b/cursoHtmlAlura/contato.html
@@ -61,9 +61,32 @@
 					<label><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
 				</div>
 
-				<input type="submit" value="Enviar formulário">
+				<input type="submit" value="Enviar formulário" class="enviar">
 
 			</form>
+
+			<table>
+				<thead>
+					<tr>
+						<th>Dia</th>
+						<th>Horário</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Segunda</td>
+						<td>8:00 às 20:00</td>
+					</tr>
+					<tr>
+						<td>Quarta</td>
+						<td>21:00 às 00:00</td>
+					</tr>
+					<tr>
+						<td>Sexta</td>
+						<td>00:00 às 8:00</td>
+					</tr>
+				</tbody>
+			</table>
 		</main>
 
 		<footer>
