--- a/cursoHtmlAlura/contato.html
+++ b/cursoHtmlAlura/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 	<head>
 		<meta charset="UTF-8">
 		<title>Contato - Barbearia Alura</title>
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png" alt="Logo da barbearia"></h1>
+				<h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
 
 				<nav>
 					<ul>
@@ -28,69 +28,59 @@
 				<input type="text" id="nomesobrenome" class="input-padrao" required>
 
 				<label for="email">Email</label>
-				<input type="email" id="email" class="input-padrao" placeholder="email@dominio.com" required>
+				<input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
 				<label for="telefone">Telefone</label>
-				<input type="tel" id="telefone" class="input-padrao" required placeholder="(DDD) 91234-4321">
+				<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
 				<label for="mensagem">Mensagem</label>
-				<textarea name="" id="mensagem" cols="60" rows="10" class="input-padrao" required placeholder="Digite aqui a sua mensagem"></textarea>
-
+				<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
 				<fieldset>
-
-					<legend class="teste" id="teste">Como prefere o nosso contato?</legend>
-					<label for="radio-whatsapp"><input type="radio" name="contato" id="radio-whatsapp" checked>Whatsapp</label>
-
-					<label for="radio-email"><input type="radio" name="contato" id="radio-email" value="email">Email</label>
+					<legend>Como prefere o nosso contato?</legend>
+					<label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email"> Email</label>
 					
-					<label for="radio-telefone"><input type="radio" name="contato" id="radio-telefone" value="telefone">Telefone</label>
-
+					<label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone"> Telefone</label>
+					
+					<label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked> WhatsApp</label>
 				</fieldset>
 
 				<fieldset>
-					<legend>Em que horário prefere ser atendido(a)?</legend>
+					<legend>Qual horário prefere ser atendido?</legend>
 					<select>
-						<option value="manha">Manhã</option>
-						<option value="tarde" selected>Tarde</option>
-						<option value="noite">Noite</option>
+						<option>Manhã</option>
+						<option>Tarde</option>
+						<option>Noite</option>
 					</select>
 				</fieldset>
 
-				<div>
-					<label><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
-				</div>
+				<label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
 
 				<input type="submit" value="Enviar formulário" class="enviar">
-
 			</form>
 
 			<table>
-				<thead>
-					<tr>
-						<th>Dia</th>
-						<th>Horário</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Segunda</td>
-						<td>8:00 às 20:00</td>
-					</tr>
-					<tr>
-						<td>Quarta</td>
-						<td>21:00 às 00:00</td>
-					</tr>
-					<tr>
-						<td>Sexta</td>
-						<td>00:00 às 8:00</td>
-					</tr>
-				</tbody>
+				<tr>
+					<td>Dia</td>
+					<td>Horário</td>
+				</tr>
+				<tr>
+					<td>Segunda</td>
+					<td>8h ~ 20h</td>
+				</tr>
+				<tr>
+					<td>Quarta</td>
+					<td>8h ~ 20h</td>
+				</tr>
+				<tr>
+					<td>Sexta</td>
+					<td>8h ~ 20h</td>
+				</tr>
 			</table>
 		</main>
 
 		<footer>
-			<img src="logo-branco.png" alt="Logo da barbearia">
+			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
 			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
