--- a/cursoHtmlAlura/index.html
+++ b/cursoHtmlAlura/index.html
@@ -3,33 +3,34 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="reset.css"> 
+
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
 		<header>
 			<div class="caixa">
-			<h1><img src="logo.png" alt=""></h1>
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="produtos.html">Produtos</a></li>
-					<li><a href="contato.html">Contato</a></li>
-				</ul>
-			</nav>
+				<h1><img src="logo.png"></h1>
+
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
 			</div>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
 		</header>
 
 		<img class="banner" src="banner.jpg">
+
 		<main>
 			<section class="principal">
 				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro">
-		
+				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro.">
+		 
 				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
 				<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
@@ -38,7 +39,7 @@
 			</section>
 
 			<section class="beneficios">
-				<h3 class="titulo-centralizado">Benefícios</h3>
+				<h3 class="titulo-principal">Benefícios</h3>
 
 				<ul>
 					<li class="itens">Atendimento aos Clientes</li>
@@ -47,11 +48,13 @@
 					<li class="itens">Profissionais Qualificados</li>
 				</ul>
 
-				<img class="imagembeneficios" src="beneficios.jpg">
+				<img src="beneficios.jpg" class="imagembeneficios">
 			</section>
 		</main>
+
 		<footer>
-			<img src="logo-branco.png" alt="">
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
 </html>
